--- a/src/main/resources/locale/gr_GR.yml
+++ b/src/main/resources/locale/gr_GR.yml
@@ -109,13 +109,11 @@ command-convert-warning: '&cΠροσοχλη: Αυτή η ενέργεια θα 
 
 # Account Command
 command-account-description: 'Διαχειρίζεται τη δημιουργία και τη διαγραφή λογαριασμών'
-command-account-create-success: '&aΔημιουργήθηκε επιτυχώς λογαριασμός: %account%'
-command-account-create-exists: '&cΑπέτυχε η δημιουργία λογαριασμού. Ένας λογαριασμός με όνομα %account% υπάρχει ήδη.'
-command-account-create-name-invalid: '&cΑπέτυχε η δημιουργία λογαριασμού. Τα ονόματα λογαριασμών πρέπει να έχουν μήκος μεταξύ 3-16 χαρακτήρων και μπορούν να περιέχουν μόνο γράμματα, αριθμούς και υπογράμμιση.'
-command-account-create-warning: '&cΑνακοίνωση: Αυτή η λειτουργία θα δημιουργήσει έναν λογαριασμό μη παίκτη με το όνομα "account". Αν είστε απολύτως σίγουροι γι'' αυτό, χρησιμοποιήστε &b/points account create %account% confirm&c.'
+command-account-create-success: '&aΔημιουργήθηκε επιτυχώς λογαριασμός: &b%account%'
+command-account-create-exists: '&cΑπέτυχε η δημιουργία λογαριασμού. Ένας λογαριασμός με όνομα &b%account% &cυπάρχει ήδη.'
 command-account-delete-success: '&aΔιαγράφηκε επιτυχώς ο λογαριασμός.'
-command-account-delete-does-not-exist: '&cΑπέτυχε η διαγραφή λογαριασμού. Ένας λογαριασμός με όνομα %account% δεν υπάρχει.'
-command-account-delete-warning: '&cΑνακοίνωση: Αυτή η λειτουργία θα διαγράψει όλα τα δεδομένα λογαριασμού για το λογαριασμό %account%. Αν είστε απολύτως σίγουροι γι'' αυτό, χρησιμοποιήστε &b/points account delete %account% confirm&c.'
+command-account-delete-does-not-exist: '&cΑπέτυχε η διαγραφή λογαριασμού. Ένας λογαριασμός με όνομα &b%account% &cδεν υπάρχει.'
+command-account-delete-warning: '&cΑνακοίνωση: Αυτή η λειτουργία θα διαγράψει όλα τα δεδομένα λογαριασμού για το λογαριασμό &b%account%&c. Αν είστε απολύτως σίγουροι γι'' αυτό, χρησιμοποιήστε &b/points account delete %account% confirm&c.'
 
 # Import Legacy Command
 command-importlegacy-description: 'Εισαγάγεται εναν legacy πίνακα.'
