Add non-player accounts (#70)
* Make commands besides pay include player in tab completion

* Add Account Command for adding non-player accounts and deleting accounts manually

- Add lang message for unknown-account
- Added setting for OFFLINE_PLAYER_LIST_UPDATE_FREQUENCY, which is a list that will popular offline players and non-player accounts for tab completion

* Rename offlinePlayerList to cachedAccountsList

* Add validation check for account names

- Moved confirm check to bottom of logic stack

* Adjust tab complete suggestions + API Updates

- Reverted pay command suggestions
- All other commands will suggest all accounts or accounts greater than the starting balance depending on the `ONLY_SUGGEST_ACCOUNTS_GREATER_THAN_STARTING_BALANCE` config option
- Added `getAccountUUIDFromCache` to the API for a way to get all accounts without querying the database.
- Added `getAccountUUIDFromDatabase` to the API if you don't mind querying the database.
- Added a map for storing usernames and uuid's in a map that is updated every `CACHED_ACCOUNT_LIST_REFRESH_INTERVAL` in the config

* Machine translations for French

* Machine translations for Greek

* Machine translations for Hungarian

* Machine translations for Indonesian

* Machine translations for Japanese

* Machine translations for Portuguese

* Machine translations for Vietnamese

* Machine translations for Chinese

* Machine translations for Traditional Chinese

* Add config option for showing non-player accounts on leaderboards

* Consistency and some other tweaks

---------

Co-authored-by: Esophose <esophose@gmail.com>

--- a/src/main/resources/locale/en_US.yml
+++ b/src/main/resources/locale/en_US.yml
@@ -15,6 +15,7 @@ no-permission: '&cYou don''t have permission for that!'
 only-player: '&cThis command can only be executed by a player.'
 invalid-amount: '&cAmount must be a positive whole number.'
 unknown-player: '&cPlayer could not be found: &b%player%'
+unknown-account: '&cAccount could not be found: &b%account%'
 unknown-command: '&cUnknown command: &b%input%'
 invalid-argument: '&cInvalid argument: %message%.'
 command-usage: '&cUsage: &b/%cmd% %args%'
@@ -105,6 +106,15 @@ command-convert-invalid: '&b%plugin% &cis not a convertible currency plugin name
 command-convert-success: '&aCurrency data from &b%plugin% &ais being converted.'
 command-convert-failure: '&cAn error occurred while attempting to convert the data. Please check your console and report any errors to the PlayerPoints plugin author.'
 command-convert-warning: '&cNotice: This operation will delete all data from the active database and replace it with the data from &b%plugin%&c. &cIf you are absolutely sure about this, use &b/points convert %plugin% confirm&c.'
+
+# Account Command
+command-account-description: 'Create or delete an accounts'
+command-account-create-success: '&aSuccessfully created account: &b%account%'
+command-account-create-exists: '&cFailed to create account. An account named &b%account% &calready exists.'
+command-account-create-name-invalid: '&cFailed to create account. Account names must be between 3-16 characters long and can only contain letters, numbers, and underscores.'
+command-account-delete-success: '&aSuccessfully deleted account &b%account%&a.'
+command-account-delete-does-not-exist: '&cFailed to delete account. An account named &b%account% &cdoes not exist.'
+command-account-delete-warning: '&cNotice: This operation will delete all account data for the account &b%account%&c. If you are absolutely sure about this, use &b/points account delete %account% confirm&c.'
 
 # Import Legacy Command
 command-importlegacy-description: 'Import a legacy table'
