--- a/src/main/resources/locale/fr_FR.yml
+++ b/src/main/resources/locale/fr_FR.yml
@@ -15,6 +15,7 @@ no-permission: '&cVous n''avez pas la permission pour ça!'
 only-player: '&cCette commande ne peut être exécutée que par un joueur.'
 invalid-amount: '&cLe montant doit être un nombre entier positif.'
 unknown-player: '&cLe joueur est introuvable: &b%player%'
+unknown-account: '&cLe compte n''a pas pu être trouvé: &b%account%'
 unknown-command: '&cCommande inconnue: &b%input%'
 invalid-argument: 'Argument non valide: %message%'
 command-usage: '&cUtilisation: &b/%cmd% %args%'
@@ -105,6 +106,15 @@ command-convert-invalid: '&b%plugin% &cn''est pas un nom de plugin de devise con
 command-convert-success: '&aDonnées monétaires de &b%plugin% &aa été converti.'
 command-convert-failure: '&cUne erreur s''est produite lors de la tentative de conversion des données. Veuillez vérifier votre console et signaler toute erreur à l''auteur du plugin PlayerPoints.'
 command-convert-warning: '&cRemarque: Cette opération supprimera toutes les données de la base de données active et la remplacera par les données de &b%plugin%&c. &cSi vous en êtes absolument sûr, utilisez &b/points convert %plugin% confirm&c.'
+
+# Account Command
+command-account-description: 'Gère la création et la suppression des comptes'
+command-account-create-success: '&aCompte créé avec succès: &b%account%'
+command-account-create-exists: '&cÉchec de la création d''un compte. Un compte nommé &b%account% &cexiste déjà.'
+command-account-create-name-invalid: '&cÉchec de la création d''un compte. Les noms de compte doivent être composés de 3 à 16 caractères et ne peuvent contenir que des lettres, des chiffres et des traits de soulignement.'
+command-account-delete-success: '&aSuppression réussie du compte.'
+command-account-delete-does-not-exist: '&cÉchec de la suppression du compte. Le compte nommé &b%account% &cn''existe pas.'
+command-account-delete-warning: '&cAvis: Cette opération supprimera toutes les données du compte &b%account%&c. Si vous êtes absolument sûr de vous, utilisez &b/points account delete %account% confirm&c.'
 
 # Import Legacy Command
 command-importlegacy-description: 'Importe une table hérité'
