--- a/src/main/resources/locale/hu_HU.yml
+++ b/src/main/resources/locale/hu_HU.yml
@@ -15,6 +15,7 @@ no-permission: '&cNincs jogod ehhez!'
 only-player: '&cEzt a parancsot csak egy játékos hajthatja végre.'
 invalid-amount: '&cMennyiségnek pozitív egész számnak kell lennie.'
 unknown-player: '&cJátékos nem található: &b%player%'
+unknown-account: '&cA fiókot nem sikerült megtalálni: &b%account%'
 unknown-command: '&cIsmeretlen parancs: &b%input%'
 invalid-argument: '&cInvalid argument: %message%.'
 command-usage: '&cHasználat: &b/%cmd% %args%'
@@ -105,6 +106,15 @@ command-convert-invalid: '&b%plugin% &cnem konvertálható valuta plugin.'
 command-convert-success: '&aValuta adat a &b%plugin%-ból/ből &aát konvertálva.'
 command-convert-failure: '&cHiba történt az adat konvertálás közben. Kérlek ellenőrizd a konzolt és jelezd a hibákat a PlayerPoints plugin készítőjének.'
 command-convert-warning: '&cFigyelmeztetés: Ez a művelet törli az összes eddigi adatot és importálja az adatokat a &b%plugin%-ból/ből&c. &cHa teljesen biztos vagy ebben, akkor használd a &b/points convert %plugin% confirm &cparancsot.'
+
+# Account Command
+command-account-description: 'Kezeli a számlák létrehozását és törlését'
+command-account-create-success: '&aSikeresen létrehozott fiók: &b%account%'
+command-account-create-exists: '&cNem sikerült fiókot létrehozni. Egy &b%account% &cnevű fiók már létezik.'
+command-account-create-name-invalid: '&cNem sikerült fiókot létrehozni. A fiókneveknek 3-16 karakter hosszúságúnak kell lenniük, és csak betűket, számokat és aláhúzásokat tartalmazhatnak.'
+command-account-delete-success: '&aSikeresen törölte a fiókot.'
+command-account-delete-does-not-exist: '&cNem sikerült törölni a fiókot. A &b%account% &cnevű fiók nem létezik.'
+command-account-delete-warning: '&cÉrtesítés: Ez a művelet törli a &b%account% &cfiók összes fiókadatát. Ha teljesen biztos vagy benne, használd &b/points account delete %account% confirm&c.'
 
 # Import Legacy Command
 command-importlegacy-description: 'Importálja a régebbi táblát'
