--- a/src/main/resources/locale/zh_TW.yml
+++ b/src/main/resources/locale/zh_TW.yml
@@ -15,6 +15,7 @@ no-permission: '&c你沒有權限!'
 only-player: '&c這個指令只能由玩家執行。'
 invalid-amount: '&c數量必須是一個正整數.'
 unknown-player: '&c找不到此玩家: &b%player%'
+unknown-account: '&c無法找到帳戶: &b%account%'
 unknown-command: '&c未知指令: &b%input%'
 invalid-argument: '&c無效參數：%message%。'
 command-usage: '&使用方式: &b/%cmd% %args%'
@@ -105,6 +106,15 @@ command-convert-invalid: '&b%plugin% &c不是可以轉換數據庫的插件.'
 command-convert-success: '&a來自 &b%plugin% &a的數據庫已成功轉移.'
 command-convert-failure: '&c嘗試轉換數據庫時發生錯誤. 請檢查你的控制台並且回報錯誤給 PlayerPoints 的作者.'
 command-convert-warning: '&c警告: 此動作將會刪除數據庫內所有資料, 並將數據庫替換為 &b%plugin%&c 的資料. &c如果你確定要繼續, 請使用 &b/points convert %plugin% confirm&c.'
+
+# Account Command
+command-account-description: '管理帳戶的建立和刪除'
+command-account-create-success: '&a成功建立帳號: &b%account%'
+command-account-create-exists: '&c建立帳戶失敗。名為 &b%account% &c的帳戶已經存在。'
+command-account-create-name-invalid: '&c建立帳戶失敗。帳戶名稱的長度必須在 3-16 個字元之間，且只能包含字母、數字和底線。'
+command-account-delete-success: '&a成功刪除帳戶。'
+command-account-delete-does-not-exist: '&c刪除帳戶失敗。名為 &b%account% &c的帳戶不存在。'
+command-account-delete-warning: '&c注意： 此操作將刪除帳戶 &b%account% &c的所有帳戶資料。如果您有絕對的把握，請使用 &b/points account delete %account% confirm&c.'
 
 # Import Legacy Command
 command-importlegacy-description: '導入舊表'
